--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
         <div class="row mt-4">
           <div class="col-md-12 text-center">
             <button type="submit" class="btn btn-primary btn-lg">Get Recommendation</button>
+            <button type="submit" class="btn btn-primary btn-lg">Test POST</button>
           </div>
         </div>
       </form>
